# Panoptic

./: .gitignore  CITATION.bib  CITATION.cff  CLAUDE.md  DATAFLOW.md  Dockerfile  Dockerfile-base.dockerfile  PluginSimpleGuide.md  README-FR.md  README.md  TODO  notes.txt  package-lock.json  package.json  program.prof  start_panoptic_linux.sh  todo.md  tree.txt  tsconfig.json  vite.config.js
docker/: entrypoint.sh
panoptic_back/: .gitignore  VERSION  build_commans.txt  description.md  freeze.txt  pyproject.toml  requirements.txt  setup.py  test_import.csv  tsne_coords.json
panoptic_back/html/: index.html
panoptic_back/html/assets/: index-51720030.js  index-f5c62b51.css
panoptic_back/notes/: file_property_mode.md  iiif_source_plan.md  instance_tag_value_refactor.md  main2_plan.md  panoptic2_architecture.md  plugin_architecture.md  plugin_system_migration.md  plugin_tutorial.md  project2_architecture.md  project_class.md  routes_reference.md  sequence_sync.md  task_manager_rewrite.md  to fix.md  ui_broadcast_watcher.md  versioning_architecture.md  versioning_generic_log_design.md  versioning_multiuser_undo.md  versioning_replay_analysis.md  versioning_revert_complexity.md
panoptic_back/notes/.obsidian/: workspace.json
panoptic_back/panoptic/: __init__.py  api.py  cli.py  dateformat.py  importer.py  main.py  plugin.py  project_manager.py  start.py  test.py  test_ui.py  ui.py  utils.py
panoptic_back/panoptic/FaissPlugin/: compute_vector_task.py  faiss_plugin.py
panoptic_back/panoptic/compute/: __init__.py  ocr.py  similarity.py  transform.py  utils.py
panoptic_back/panoptic/core/: __init__.py  db.py  db_utils.py  exporter.py  image_importer.py  importer.py  panoptic.py  panoptic_server.py  plugin.py  process_queue.py  project.py
panoptic_back/panoptic/db/: create.py  db.py  db_utils.py
panoptic_back/panoptic2/: main.py
panoptic_back/scripts/: create_db.sql
panoptic_back/test/: conftest.py  export_to_import.py  gen_import_csv.py  test_data_db.py  test_media_db.py  test_panoptic2.py  test_panoptic_db.py  test_project.py  test_project_db.py  test_registry.py  test_task_manager.py
(+1384 files in other folders)
